--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,13 +7,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Title="FluentNotes">
+    Title="Fluent Notes">
 
     <Window.SystemBackdrop>
         <MicaBackdrop />
     </Window.SystemBackdrop>
 
-    <Grid>
-
+    <Grid x:Name="rootGrid" Loaded="MainWindow_Loaded">
+        <TextBlock Style="{StaticResource DisplayTextBlockStyle}"
+                   Text="Fluent Notes"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" />
     </Grid>
 </Window>
